--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -71,7 +71,7 @@ img {
 .container {
     max-width: 144rem;
     margin: 0 auto;
-    padding: 0 2.4rem;
+    padding: var(--container-spacing);
 }
 
 .title {
@@ -83,7 +83,7 @@ img {
     margin-bottom: var(--margin-bottom-md);
 }
 
-d-grid {
+.d-grid {
     display: grid;
 }
 /* Reusable classes */
@@ -194,6 +194,10 @@ d-grid {
     z-index: 100;
 }
 
+.btn-scroll-down {
+    position: relative;
+    z-index: 10000;
+}
 .tagline {
     display: inline-block;
     font-size: var(--font-size-sm);
@@ -344,3 +348,225 @@ d-grid {
     gap: var(--margin-bottom-sm);
 }
 /* Media queries */
+
+@media screen and (min-width: 768px) {
+    :root {
+        --font-size-xl: 5.8rem;
+        --container-spacing: 0 8rem;
+    }
+
+    /* hero */
+    .hero {
+        height: 100vh;
+    }
+
+    .parallax-img {
+        height: auto;
+    }
+
+    .parallax-bottom-img {
+        top: 45%;
+    }
+
+    .parallax-middle-img {
+        top: 30%;
+    }
+
+    /* hiking informaition */
+
+    .card {
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: 6.4rem;
+        margin-bottom: 20rem;
+    }
+
+    .card-image {
+        grid-column: 1/-1;
+        width: 60rem;
+        height: 42rem;
+        justify-self: center;
+    }
+
+    .card-info {
+        grid-column: 1/-1;
+    }
+
+    .count {
+        font-size: 20rem;
+        left: -8rem;
+    }
+
+    .tagline {
+        margin-left: 9.5rem;
+    }
+
+    .tagline::before {
+        width: 7.2rem;
+        left: -9rem;
+    }
+
+    .card-title {
+        font-size: 6.4rem;
+    }
+    /* footer */
+
+    .footer-container {
+        grid-template-columns: .75fr 1fr;
+        column-gap: 6.4rem;
+    }
+
+    .brand-information {
+        order: 0;
+        max-width: 30rem;
+    }
+
+    .footer-nav {
+        order: 1;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 6.4rem;
+    }
+
+    .footer-nav-link:last-child {
+        margin-bottom: 0;
+    }
+
+    .copyright {
+        margin-top: auto;
+        margin-bottom: 0;
+    }
+}
+
+@media screen and (min-width: 991px) {
+    :root {
+        --font-size-xl: 7.5rem;
+    }
+
+    /* header */
+
+    .menu {
+        position: initial;
+        transform: initial;
+        width: initial;
+        background-color: initial;
+        padding: initial;
+        border-radius: initial;
+        transition: initial;
+        margin-left: initial;
+    }
+
+    .menu,
+    .nav-list {
+        flex-direction: row;
+        gap: 0;
+    }
+
+    .lg-screen-hidden,
+    .menu-toggle-icon {
+        display: none;
+    }
+
+    .sm-screen-hidden {
+        display: block;
+    }
+
+    .nav-link {
+        display: inline-block;
+        font-weight: bold;
+        padding: .8rem 2.4rem;
+    }
+
+    .account-link {
+        display: inline-flex;
+        align-items: center;
+        gap: 1rem;
+    }
+
+    .account-link i {
+        font-weight: 300;
+    }
+
+    .btn, 
+    .btn i, 
+    .nav-link {
+        transition: transform .5s;
+    }
+
+    .btn:hover, 
+    .nav-link:hover {
+        color: var(--clr-accent);
+    }
+
+    .btn-scroll-down:hover i {
+        transform: translateY(.5rem);
+    }
+
+    .btn-accent:hover i{
+        transform: translateX(.5rem);
+    }
+
+    /* hero */
+
+    .parallax-bottom-img {
+        top: 60%;
+    }
+
+    .parallax-middle-img {
+        top: 40%;
+    }
+
+    .hero-data {
+        top: 45%;
+        max-width: 79rem;
+        justify-self: center;
+    }
+
+    /* hiking information */
+
+    .hiking-information {
+        margin: 0;
+        padding-top: 20rem;
+    }
+
+    .card {
+        column-gap: 8.1rem;
+    }
+
+    .card-image {
+        grid-column: initial;
+        order: 1;
+        width: 48rem;
+        height: 68rem;
+        justify-self: end;
+    }
+
+    .card-info {
+        grid-column: initial;
+        align-self: center;
+    }
+
+    .order-first {
+        order: 0;
+        justify-self: start;
+    }
+    /* footer */
+
+    .footer-container {
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 0;
+    }
+
+    .footer-nav-group {
+        justify-self: end;
+    }
+}
+
+@media screen and (min-width: 1068px) {
+    .hero-data {
+        top: 0;
+        text-align: center;
+    }
+
+    .count {
+        left: -10rem;
+    }
+}
